<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_work"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tr2016.hederkosher.WorkActivity">

    <TextView
        android:id="@+id/textViewWelcomeWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/buttonMyWorkOut"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWelcomeWork"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="openShareNBurnActivity"
        android:text="@string/buttonMyWorkOut"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/buttonCoach"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMyWorkOut"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/Coach"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonFeed"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.8"
            android:text="@string/buttonFeed"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Button
            android:id="@+id/buttonActivityInbox"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1.1"
            android:text="@string/buttonActivity_inbox"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Button
            android:id="@+id/buttonProgressSettings"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1.2"
            android:text="@string/buttonProgress_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Button
            android:id="@+id/buttonPhotoWork"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="@string/buttonPhoto"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    </LinearLayout>

</RelativeLayout>
