<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tr2016.hederkosher.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextFirstName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:hint="@string/firstname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextSecondName"
        android:hint="@string/secondname"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextSecondName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextLastName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/lastname"
        style="@android:style/Widget.DeviceDefault.EditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="@string/e_mail"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_below="@+id/editTextLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/image_user_mini"
        android:id="@+id/imageUserMini"
        android:adjustViewBounds="false"
        android:layout_below="@+id/editTextPassword"
        android:layout_above="@+id/buttonRegistration"
        android:contentDescription="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameOfApp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/textViewNameOfAppRegistration"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        tools:text="@string/nameOfApp"
        android:gravity="center_horizontal" />

    <Button
        android:text="@string/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegistration"
        android:layout_above="@+id/textViewNameOfAppRegistration"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
